# project_template

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
