[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["Mirco Marahrens <mirco.marahrens@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
